# VisualGraph

./: .gitignore  CMakeLists.txt  README.md  TODO.txt
VisualGraph/: CMakeLists.txt  Global.cpp  Global.h  GraphCanvas.cpp  GraphCanvas.h  GraphWidget.cpp  GraphWidget.h  Main.cpp  VisualGraph.cpp  VisualGraph.h  VisualGraph.qrc  VisualGraph.ui  WaitCursor.h
VisualGraph/Icons/: Icons.txt
glut_app/: CMakeLists.txt  Main.cpp
oggl/: CMakeLists.txt  DebugStream.cpp  DebugStream.h  GraphCreator.cpp  GraphCreator.h  GraphPainter.cpp  GraphPainter.h  Math.h  Shader.cpp  Shader.h  ShaderCode.h  Types.h  Util.cpp  Util.h
oggl/glload/include/glload/: _int_gl_1_1.h  _int_gl_1_1.hpp  _int_gl_1_1_rem_3_1.h  _int_gl_1_1_rem_3_1.hpp  _int_gl_1_2.h  _int_gl_1_2.hpp  _int_gl_1_2_rem_3_1.h  _int_gl_1_2_rem_3_1.hpp  _int_gl_1_3.h  _int_gl_1_3.hpp  _int_gl_1_3_rem_3_1.h  _int_gl_1_3_rem_3_1.hpp  _int_gl_1_4.h  _int_gl_1_4.hpp  _int_gl_1_4_rem_3_1.h  _int_gl_1_4_rem_3_1.hpp  _int_gl_1_5.h  _int_gl_1_5.hpp  _int_gl_1_5_rem_3_1.h  _int_gl_1_5_rem_3_1.hpp  _int_gl_2_0.h  _int_gl_2_0.hpp  _int_gl_2_0_rem_3_1.h  _int_gl_2_0_rem_3_1.hpp  _int_gl_2_1.h  _int_gl_2_1.hpp  _int_gl_2_1_rem_3_1.h  _int_gl_2_1_rem_3_1.hpp  _int_gl_3_0.h  _int_gl_3_0.hpp  _int_gl_3_0_rem_3_1.h  _int_gl_3_0_rem_3_1.hpp  _int_gl_3_1.h  _int_gl_3_1.hpp  _int_gl_3_2.h  _int_gl_3_2.hpp  _int_gl_3_3.h  _int_gl_3_3.hpp  _int_gl_4_0.h  _int_gl_4_0.hpp  (+45 more)
oggl/glload/source/: gll_c.c  gll_cpp.cpp  gll_gl_ext.c  gll_gl_ext.h  gll_gl_ext_base.h  glxl_ext.c  wgll_ext.c  wgll_ext_base.h
oggl_test/: CalcTest.h  ColorTest.h  Test.h  UtilTest.h  main.cpp
samples/: .gitignore  GraphElemente.gml  crack.gml  raster-30x30-random-layout.gml  raster-40x40.gml  sierpinski_04-layout-random.gml  sierpinski_04-layout.gml  tree-30.gml
